--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,6 +31,9 @@ jobs:
       run: npx playwright install --with-deps
     - run: npm run build --if-present
     - run: npm test
+    - name: get-npm-version
+      id: package-version
+      uses: martinbeentjes/npm-get-version-action@v1.3.1
     -
       name: Login to Docker Hub
       uses: docker/login-action@v3
@@ -45,4 +48,4 @@ jobs:
       uses: docker/build-push-action@v6
       with:
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/svadmin:latest
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/svadmin:${{ steps.package-version.outputs.current-version}}
