--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,30 +21,33 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
+    
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - run: npm run build --if-present
     - run: npm test
-    - name: get-npm-version
+    
+    - name: Get Project Version
       id: package-version
       uses: martinbeentjes/npm-get-version-action@v1.3.1
-    -
-      name: Login to Docker Hub
+
+    - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-    -
-      name: Set up Docker Buildx
+    
+    - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
-    -
-      name: Build and push
+
+    - name: Build and push
       uses: docker/build-push-action@v6
       with:
         push: true
