--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,6 +33,7 @@ jobs:
       run: npx playwright install --with-deps
     - run: npm run build --if-present
     - run: npm test
+    - run: npm version patch
     
     - name: Get Project Version
       id: package-version
