--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,6 +34,7 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
     - run: |
+        echo 'Current Version: ${{ steps.package-version.outputs.current-version }}'
         sed -i'' "/svdadmin:/s/[[:digit:]].[[:digit:]].[[:digit:]]*/${{steps.package-version.outputs.current-version}}/" ".kubernetes/production/deployment.yaml"
         sed -i'' "/production-/s/[[:digit:]].[[:digit:]].[[:digit:]]*/${{steps.package-version.outputs.current-version}}/" "README.md"
 
