--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,12 +31,12 @@ jobs:
     
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
+
+    - name: Build
     - run: npm run build --if-present
+
+    - name: Tests
     - run: npm test
-    - run: |
-        echo 'Current Version: ${{ steps.package-version.outputs.current-version }}'
-        sed -i'' "/svdadmin:/s/[[:digit:]].[[:digit:]].[[:digit:]]*/${{steps.package-version.outputs.current-version}}/" ".kubernetes/production/deployment.yaml"
-        sed -i'' "/production-/s/[[:digit:]].[[:digit:]].[[:digit:]]*/${{steps.package-version.outputs.current-version}}/" "README.md"
 
     - name: 'Automated Version Bump'
       id: version-bump
@@ -49,6 +49,12 @@ jobs:
     - name: Get Project Version
       id: package-version
       uses: martinbeentjes/npm-get-version-action@v1.3.1
+
+    - name: Update Version in Deployment and Readme
+    - run: |
+        echo 'Current Version: ${{ steps.package-version.outputs.current-version }}'
+        sed -i'' "/svdadmin:/s/[[:digit:]].[[:digit:]].[[:digit:]]*/${{steps.package-version.outputs.current-version}}/" ".kubernetes/production/deployment.yaml"
+        sed -i'' "/production-/s/[[:digit:]].[[:digit:]].[[:digit:]]*/${{steps.package-version.outputs.current-version}}/" "README.md"
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
