--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Tests
     - run: npm test
 
-    - name: 'Automated Version Bump'
+    - name: Automated Version Bump
       id: version-bump
       uses: 'phips28/gh-action-bump-version@master'
       with:
@@ -51,10 +51,9 @@ jobs:
       uses: martinbeentjes/npm-get-version-action@v1.3.1
 
     - name: Update Version in Deployment and Readme
-    - run: |
-        echo 'Current Version: ${{ steps.package-version.outputs.current-version }}'
-        sed -i'' "/svdadmin:/s/[[:digit:]].[[:digit:]].[[:digit:]]*/${{steps.package-version.outputs.current-version}}/" ".kubernetes/production/deployment.yaml"
-        sed -i'' "/production-/s/[[:digit:]].[[:digit:]].[[:digit:]]*/${{steps.package-version.outputs.current-version}}/" "README.md"
+    - run: echo 'Current Version: ${{ steps.package-version.outputs.current-version }}'
+    - run: sed -i'' "/svdadmin:/s/[[:digit:]].[[:digit:]].[[:digit:]]*/${{steps.package-version.outputs.current-version}}/" ".kubernetes/production/deployment.yaml"
+    - run: sed -i'' "/production-/s/[[:digit:]].[[:digit:]].[[:digit:]]*/${{steps.package-version.outputs.current-version}}/" "README.md"
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
