--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -51,9 +51,11 @@ jobs:
       uses: martinbeentjes/npm-get-version-action@v1.3.1
 
     - name: Update Version in Deployment and Readme
-    - run: echo 'Current Version: ${{ steps.package-version.outputs.current-version }}'
-    - run: sed -i'' "/svdadmin:/s/[[:digit:]].[[:digit:]].[[:digit:]]*/${{steps.package-version.outputs.current-version}}/" ".kubernetes/production/deployment.yaml"
-    - run: sed -i'' "/production-/s/[[:digit:]].[[:digit:]].[[:digit:]]*/${{steps.package-version.outputs.current-version}}/" "README.md"
+      env:
+        CURRENT_VERSION: ${{ steps.package-version.outputs.current-version }}
+    - run: echo 'Current Version: $CURRENT_VERSION'
+    - run: sed -i'' "/svdadmin:/s/[[:digit:]].[[:digit:]].[[:digit:]]*/$CURRENT_VERSION/" ".kubernetes/production/deployment.yaml"
+    - run: sed -i'' "/production-/s/[[:digit:]].[[:digit:]].[[:digit:]]*/$CURRENT_VERSION/" "README.md"
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
