--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -53,9 +53,9 @@ jobs:
     - name: Update Version in Deployment and Readme
       env:
         CURRENT_VERSION: ${{ steps.package-version.outputs.current-version }}
-    - run: echo "CCurrent Version: $CURRENT_VERSION"
-    - run: sed -i'' "/svdadmin:/s/[[:digit:]].[[:digit:]].[[:digit:]]*/$CURRENT_VERSION/" ".kubernetes/production/deployment.yaml"
-    - run: sed -i'' "/production-/s/[[:digit:]].[[:digit:]].[[:digit:]]*/$CURRENT_VERSION/" "README.md"
+      run: echo "Current Version: $CURRENT_VERSION"
+      run: sed -i'' "/svdadmin:/s/[[:digit:]].[[:digit:]].[[:digit:]]*/$CURRENT_VERSION/" ".kubernetes/production/deployment.yaml"
+      run: sed -i'' "/production-/s/[[:digit:]].[[:digit:]].[[:digit:]]*/$CURRENT_VERSION/" "README.md"
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
