--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -49,7 +49,9 @@ jobs:
     - name: Get Project Version
       id: package-version
       uses: martinbeentjes/npm-get-version-action@v1.3.1
-      run: echo "Current Version: ${{ steps.package-version.outputs.current-version }}"
+      env:
+        CURRENT_VERSION: ${{ steps.version-bump.outputs.new_tag }}
+      run: echo "Current Version: $CURRENT_VERSION"
 
         #- name: Update Version in Deployment and Readme
         #env:
