--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -49,17 +49,19 @@ jobs:
     - name: Get Project Version
       id: package-version
       uses: martinbeentjes/npm-get-version-action@v1.3.1
+
+    - name: Echo Current Version
       env:
         CURRENT_VERSION: ${{ steps.version-bump.outputs.new_tag }}
       run: echo "Current Version: "
 
-        #- name: Update Version in Deployment and Readme
-        #env:
-        #CURRENT_VERSION: ${{ steps.package-version.outputs.current-version }}
-        #run: echo "teste"
-        #run: echo "Current Version: $CURRENT_VERSION"
-        #run: sed -i'' "/svdadmin:/s/[[:digit:]].[[:digit:]].[[:digit:]]*/$CURRENT_VERSION/" ".kubernetes/production/deployment.yaml"
-        #run: sed -i'' "/production-/s/[[:digit:]].[[:digit:]].[[:digit:]]*/$CURRENT_VERSION/" "README.md"
+    #- name: Update Version in Deployment and Readme
+    #env:
+    #CURRENT_VERSION: ${{ steps.package-version.outputs.current-version }}
+    #run: echo "teste"
+    #run: echo "Current Version: $CURRENT_VERSION"
+    #run: sed -i'' "/svdadmin:/s/[[:digit:]].[[:digit:]].[[:digit:]]*/$CURRENT_VERSION/" ".kubernetes/production/deployment.yaml"
+    #run: sed -i'' "/production-/s/[[:digit:]].[[:digit:]].[[:digit:]]*/$CURRENT_VERSION/" "README.md"
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
