--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -51,9 +51,7 @@ jobs:
       uses: martinbeentjes/npm-get-version-action@v1.3.1
 
     - name: Echo Current Version
-      env:
-        CURRENT_VERSION: ${{ steps.version-bump.outputs.new_tag }}
-    - run: echo "Current Version: "
+      run: echo "Current Version"
 
     #- name: Update Version in Deployment and Readme
     #env:
