--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -41,15 +41,15 @@ jobs:
         tag-prefix: 'v'
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - name: Show the new version
-      env:
-        NEW_VERSION: ${{ steps.version-bump.outputs.new_tag }}
-      run: |
-        echo "The new version is $NEW_VERSION"
 
     - name: Get Project Version
       id: package-version
       uses: martinbeentjes/npm-get-version-action@v1.3.1
+    - name: Show the current version
+      env:
+        NEW_VERSION: ${{ steps.version-bump.outputs.new_tag }}
+      run: |
+        echo "The new version is $NEW_VERSION"
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
