--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -47,7 +47,7 @@ jobs:
       uses: martinbeentjes/npm-get-version-action@v1.3.1
     - name: Show the current version
       env:
-        NEW_VERSION: ${{ steps.version-bump.outputs.new_tag }}
+        NEW_VERSION: ${{ steps.package-version.outputs.current-version }}
       run: |
         echo "The new version is $NEW_VERSION"
 
