--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -50,6 +50,8 @@ jobs:
         NEW_VERSION: ${{ steps.package-version.outputs.current-version }}
       run: |
         echo "The new version is $NEW_VERSION"
+        sed -i'' "/svdadmin:/s/[[:digit:]].[[:digit:]].[[:digit:]]*/$NEW_VERSION/" ".kubernetes/production/deployment.yaml"
+        sed -i'' "/production-/s/[[:digit:]].[[:digit:]].[[:digit:]]*/$NEW_VERSION/" "README.md"
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
