--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -52,7 +52,10 @@ jobs:
         echo "The new version is $NEW_VERSION"
         sed -i'' "/svdadmin:/s/[[:digit:]].[[:digit:]].[[:digit:]]*/$NEW_VERSION/" ".kubernetes/production/deployment.yaml"
         sed -i'' "/production-/s/[[:digit:]].[[:digit:]].[[:digit:]]*/$NEW_VERSION/" "README.md"
+        grep 'svdadmin:' .kubernetes/production/deployment.yaml
+        grep 'production-' README.md
         git status
+        git add . 
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
