--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -50,12 +50,16 @@ jobs:
         NEW_VERSION: ${{ steps.package-version.outputs.current-version }}
       run: |
         echo "The new version is $NEW_VERSION"
+        echo "Update deployment.yaml"
         sed -i'' "/svdadmin:/s/[[:digit:]].[[:digit:]].[[:digit:]]*/$NEW_VERSION/" ".kubernetes/production/deployment.yaml"
+        echo "Update README.md"
         sed -i'' "/production-/s/[[:digit:]].[[:digit:]].[[:digit:]]*/$NEW_VERSION/" "README.md"
+        echo "grep deployment.yaml" 
         grep 'svdadmin:' .kubernetes/production/deployment.yaml
+        echo "grep README.md"
         grep 'production-' README.md
         git status
-        git add . 
+        #git add . 
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
