ci: test update version

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -55,7 +55,7 @@ jobs:
         echo "Update README.md"
         sed -i'' "/production-/s/[[:digit:]].[[:digit:]].[[:digit:]]*/$NEW_VERSION/" "README.md"
         echo "grep deployment.yaml" 
-        grep 'svdadmin:' .kubernetes/production/deployment.yaml || true
+        grep 'svadmin:' .kubernetes/production/deployment.yaml || true
         echo "grep README.md"
         grep 'production-' README.md || true
         git add . 
