ci: increment version without external actions

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -78,4 +78,4 @@ jobs:
       uses: docker/build-push-action@v6
       with:
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/svadmin:${{ NEW_VERSION }}
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/svadmin:${{ env.NEW_VERSION }}
